# api

./: Cargo.toml  build.rs
src/: main.rs
src/api/: mod.rs
src/common/queue/: mod.rs
src/config/: email.rs  mod.rs
src/db/: connection.rs
src/email/: config.rs  mod.rs
src/email/providers/: SES.rs  mailgun.rs  mod.rs  sendgrid.rs  ses.rs
src/grpc/: email.rs  mod.rs
src/grpc/proto/: email.proto  mod.rs  test.proto
