[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0"
tracing-subscriber = "0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
hyper = { version = "0", features = ["full"] }
routerify = "3"
dotenvy = "0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "runtime-tokio-rustls", "postgres", "macros", "time", "chrono"] }
chrono = {version = "0", features = ["serde"] }
aws-config = "0"
aws-sdk-sesv2 = "0"
aws-sdk-sqs = "0"
futures = "0"
async-trait = "0"
prost = "0"
tonic = "0"


[build-dependencies]
tonic-build = "0"